Added eating and sleep